--- a/HeadyQuiz2/Base.lproj/Main.storyboard
+++ b/HeadyQuiz2/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dQU-Sd-LAn">
-                                <rect key="frame" x="16" y="20" width="331" height="20.5"/>
+                                <rect key="frame" x="16" y="20" width="331" height="21"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -47,9 +47,9 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="glQ-Yi-lI1">
-                                <rect key="frame" x="81" y="183.5" width="200" height="27"/>
+                                <rect key="frame" x="41" y="183.5" width="300" height="35"/>
                                 <color key="backgroundColor" red="0.1660650612" green="0.044033208810000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <state key="normal" title="Button">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -58,9 +58,9 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VzN-zC-GE2">
-                                <rect key="frame" x="81" y="241.5" width="200" height="28"/>
+                                <rect key="frame" x="41" y="241.5" width="300" height="35"/>
                                 <color key="backgroundColor" red="0.1660650612" green="0.044033208810000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <state key="normal" title="Button">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -69,9 +69,9 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t0Z-J2-HWU">
-                                <rect key="frame" x="81" y="79.5" width="200" height="28"/>
+                                <rect key="frame" x="41" y="79.5" width="300" height="35"/>
                                 <color key="backgroundColor" red="0.1660650612" green="0.044033208810000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <state key="normal" title="Button">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -100,9 +100,10 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wMp-zb-P3w">
-                                <rect key="frame" x="105" y="421" width="154" height="30"/>
+                                <rect key="frame" x="105" y="421" width="154" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.1660650612" green="0.044033208810000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <state key="normal" title="Start Quiz">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -129,9 +130,9 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xKC-jC-les">
-                                <rect key="frame" x="81" y="137" width="200" height="28"/>
+                                <rect key="frame" x="41" y="132.5" width="300" height="35"/>
                                 <color key="backgroundColor" red="0.1660650612" green="0.044033208810000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <state key="normal" title="Button">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -142,21 +143,21 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="dQU-Sd-LAn" firstAttribute="centerX" secondItem="t0Z-J2-HWU" secondAttribute="centerX" id="BDV-Ku-cQm"/>
-                            <constraint firstItem="t0Z-J2-HWU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="89" id="D8g-KS-AdL"/>
+                            <constraint firstItem="dQU-Sd-LAn" firstAttribute="centerX" secondItem="t0Z-J2-HWU" secondAttribute="centerX" constant="-9.5" id="BDV-Ku-cQm"/>
+                            <constraint firstItem="t0Z-J2-HWU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="25" id="D8g-KS-AdL"/>
                             <constraint firstItem="glQ-Yi-lI1" firstAttribute="trailing" secondItem="VzN-zC-GE2" secondAttribute="trailing" id="EZ7-7Z-lZz"/>
-                            <constraint firstItem="glQ-Yi-lI1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="88" id="GHr-gd-uhG"/>
-                            <constraint firstItem="VzN-zC-GE2" firstAttribute="top" secondItem="glQ-Yi-lI1" secondAttribute="bottom" constant="31" id="dPc-zo-kTN"/>
-                            <constraint firstItem="xKC-jC-les" firstAttribute="top" secondItem="t0Z-J2-HWU" secondAttribute="bottom" constant="24" id="dgd-uj-hX0"/>
+                            <constraint firstItem="glQ-Yi-lI1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="25" id="GHr-gd-uhG"/>
+                            <constraint firstItem="VzN-zC-GE2" firstAttribute="top" secondItem="glQ-Yi-lI1" secondAttribute="bottom" constant="23" id="dPc-zo-kTN"/>
+                            <constraint firstItem="xKC-jC-les" firstAttribute="top" secondItem="t0Z-J2-HWU" secondAttribute="bottom" constant="18" id="dgd-uj-hX0"/>
                             <constraint firstItem="t0Z-J2-HWU" firstAttribute="top" secondItem="dQU-Sd-LAn" secondAttribute="bottom" constant="39" id="f8A-2I-oUh"/>
-                            <constraint firstItem="dQU-Sd-LAn" firstAttribute="centerX" secondItem="glQ-Yi-lI1" secondAttribute="centerX" id="h5T-QZ-2J1"/>
+                            <constraint firstItem="dQU-Sd-LAn" firstAttribute="centerX" secondItem="glQ-Yi-lI1" secondAttribute="centerX" constant="-9.5" id="h5T-QZ-2J1"/>
                             <constraint firstItem="t0Z-J2-HWU" firstAttribute="trailing" secondItem="xKC-jC-les" secondAttribute="trailing" id="hXM-un-sQI"/>
                             <constraint firstItem="t0Z-J2-HWU" firstAttribute="leading" secondItem="xKC-jC-les" secondAttribute="leading" id="jSE-cW-7XN"/>
                             <constraint firstItem="glQ-Yi-lI1" firstAttribute="leading" secondItem="VzN-zC-GE2" secondAttribute="leading" id="jet-p1-mPA"/>
                             <constraint firstItem="dQU-Sd-LAn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="l8X-st-7Ig"/>
                             <constraint firstItem="dQU-Sd-LAn" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="sMq-na-JT9"/>
                             <constraint firstAttribute="trailingMargin" secondItem="dQU-Sd-LAn" secondAttribute="trailing" constant="12" id="ske-hg-2IB"/>
-                            <constraint firstItem="glQ-Yi-lI1" firstAttribute="top" secondItem="xKC-jC-les" secondAttribute="bottom" constant="24" id="vRL-sb-qVh"/>
+                            <constraint firstItem="glQ-Yi-lI1" firstAttribute="top" secondItem="xKC-jC-les" secondAttribute="bottom" constant="16" id="vRL-sb-qVh"/>
                         </constraints>
                     </view>
                     <connections>
